--- a/MAP-2302/map.tex
+++ b/MAP-2302/map.tex
@@ -16,12 +16,12 @@
 \tableofcontents
 \pagebreak
 
-\chapter{Preface}
+\chapter*{Preface}
 \input{Preface/p.tex}
 \pagebreak
-\chapter{Unit 1}
+\chapter{}
 \input{Unit1/unit.tex}
-\chapter{Unit 2}
+\chapter{}
 \input{Unit2/unit.tex}
 
 \end{document}
