--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -37,6 +37,8 @@
 \usepackage{pdfpages}
 \usepackage{transparent}
 \usepackage{float}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.18, width=10cm}
 
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
 \SetCommentSty{mycommfont}
