--- a/COP-3503/cop.tex
+++ b/COP-3503/cop.tex
@@ -4,6 +4,9 @@
 \input{../src/macros.tex}
 \input{../src/letterfonts.tex}
 
+
+\lstset{language=Java, backgroundcolor = \color{lightgray}}
+
 \title{\Huge{COP 3503}\\Lecture Notes}
 \author{\huge{Mark Williams}}
 \date{}
@@ -15,9 +18,9 @@
 \pdfbookmark[section]{\contentsname}{toc}
 \tableofcontents
 \pagebreak
-
-\chapter*{Preface}
-% \input{Preface/examples.tex}
+\setcounter{chapter}{-1}
+\chapter{Preface}
+\input{Preface/pre.tex}
 \pagebreak
 \chapter{Exam 1}
 \input{Exam1/exam.tex}
